--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/et-line.css">
     <link rel="stylesheet" href="css/tabs.css">
     <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="/CSS/main.css">
+    <link rel="stylesheet" href="landing/CSS/main.css">
 </head>
 <body>
     <div class="wrapper">
