--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <base href="/">
     <link href="https://fonts.googleapis.com/css?family=Dosis:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/et-line.css">
-    <link rel="stylesheet" href="css/tabs.css">
-    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="landing/CSS/normalize.css">
+    <link rel="stylesheet" href="landing/CSS/et-line.css">
+    <link rel="stylesheet" href="landing/CSS/tabs.css">
+    <link rel="stylesheet" href="landing/CSS/slick.css">
     <link rel="stylesheet" href="landing/CSS/main.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
       <div class="header__inner">
         <div class="logo">
           <a href="#">
-           <img src="images/logo.png" alt="Rhythm" width='118' height='21'>
+           <img src="landing/images/logo.png" alt="Rhythm" width='118' height='21'>
           </a>
         </div>
         <nav class="main-nav">
