--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="header__inner">
         <div class="logo">
           <a href="#">
-           <img src="landing/images/logo.png" alt="Rhythm" width='118' height='21'>
+           <img src="landing/Images/logo.png" alt="Rhythm" width='118' height='21'>
           </a>
         </div>
         <nav class="main-nav">
