--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="row clearfix space">
                          <div class="col-4">
                              <div class="card">
-                                 <div class="image"> <img src="images/1.jpg" alt="image"></div>
+                                 <div class="image"> <img src="landing/Images/1.jpg" alt="image"></div>
                                 <div class="person">
                                      <span class="name">thomas rhythm</span>
                                      <span>art director</span>
@@ -90,7 +90,7 @@
                          </div>              
                     <div class="col-4">
                             <div class="card">
-                                    <div class="image"><img src="images/2.jpg" alt="image"></div>
+                                    <div class="image"><img src="landing/Images/2.jpg" alt="image"></div>
                                  <div class="person">
                                     <span class="name">marta laning</span>
                                      <span>web engineer</span>
@@ -99,7 +99,7 @@
                         </div>
                     <div class="col-4">
                             <div class="card">
-                                    <div class="image"> <img src="images/3.jpg" alt="image"></div>
+                                    <div class="image"> <img src="landing/Images/3.jpg" alt="image"></div>
                                 <div class="person">
                                 <span class="name">steve anders</span>
                                 <span>developer</span>
@@ -192,7 +192,7 @@
             <div class="relative">
             <div class="descriptionSecond">   
                <div class="monitor">   
-                    <img src="images/imac.png" alt="image">
+                    <img src="landing/Images/imac.png" alt="image">
                 </div>  
                 <div class="col-6">
                     <h2>looking for exclusive digital services?</h2>
@@ -220,42 +220,42 @@
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image1"> 
-                            <img src="images/portfolio1.jpg" alt="image">
+                            <img src="landing/Images/portfolio1.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image1"> 
-                            <img src="images/portfolio2.jpg" alt="image">
+                            <img src="landing/Images/portfolio2.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image1"> 
-                            <img src="images/portfolio5.jpg" alt="image">
+                            <img src="landing/Images/portfolio5.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image1"> 
-                            <img src="images/portfolio6.jpg" alt="image">
+                            <img src="landing/Images/portfolio6.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image1"> 
-                            <img src="images/portfolio3.jpg" alt="image">
+                            <img src="landing/Images/portfolio3.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image1"> 
-                            <img src="images/portfolio4.jpg" alt="image">
+                            <img src="landing/Images/portfolio4.jpg" alt="image">
                           </div>
                         </div>
                      </div>
@@ -264,42 +264,42 @@
             <div class="custom-col">
                         <div class="custom-card">
                           <div class="image1"> 
-                            <img src="images/portfolio2.jpg" alt="image">
+                            <img src="landing/Images/portfolio2.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image1"> 
-                            <img src="images/portfolio1.jpg" alt="image">
+                            <img src="landing/Images/portfolio1.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image1"> 
-                            <img src="images/portfolio2.jpg" alt="image">
+                            <img src="landing/Images/portfolio2.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image1"> 
-                            <img src="images/portfolio5.jpg" alt="image">
+                            <img src="landing/Images/portfolio5.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image1"> 
-                            <img src="images/portfolio6.jpg" alt="image">
+                            <img src="landing/Images/portfolio6.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image1"> 
-                            <img src="images/portfolio3.jpg" alt="image">
+                            <img src="landing/Images/portfolio3.jpg" alt="image">
                           </div>
                         </div>
                      </div>
@@ -308,42 +308,42 @@
             <div class="custom-col">
                         <div class="custom-card">
                           <div class="image"> 
-                            <img src="images/portfolio1.jpg" alt="image">
+                            <img src="landing/Images/portfolio1.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image"> 
-                            <img src="images/portfolio5.jpg" alt="image">
+                            <img src="landing/Images/portfolio5.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image"> 
-                            <img src="images/portfolio5.jpg" alt="image">
+                            <img src="landing/Images/portfolio5.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image"> 
-                            <img src="images/portfolio2.jpg" alt="image">
+                            <img src="landing/Images/portfolio2.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image"> 
-                            <img src="images/portfolio2.jpg" alt="image">
+                            <img src="landing/Images/portfolio2.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image"> 
-                            <img src="images/portfolio6.jpg" alt="image">
+                            <img src="landing/Images/portfolio6.jpg" alt="image">
                           </div>
                         </div>
                      </div>
@@ -352,42 +352,42 @@
             <div class="custom-col">
                         <div class="custom-card">
                           <div class="image"> 
-                            <img src="images/portfolio1.jpg" alt="image">
+                            <img src=landing/Images/"portfolio1.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image"> 
-                            <img src="images/portfolio2.jpg" alt="image">
+                            <img src="landing/Images/portfolio2.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image"> 
-                            <img src="images/portfolio1.jpg" alt="image">
+                            <img src="landing/Images/portfolio1.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image"> 
-                            <img src="images/portfolio1.jpg" alt="image">
+                            <img src="landing/Images/portfolio1.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image"> 
-                            <img src="images/portfolio6.jpg" alt="image">
+                            <img src="landing/Images/portfolio6.jpg" alt="image">
                           </div>
                         </div>
                      </div>
                      <div class="custom-col">
                         <div class="custom-card">
                           <div class="image"> 
-                            <img src="images/portfolio5.jpg" alt="image">
+                            <img src="landing/Images/portfolio5.jpg" alt="image">
                           </div>
                         </div>
                      </div>
@@ -522,7 +522,7 @@ risus utaliquam dapibus. Thanks!</blockquote>
             <div class="col-4">
               <div class="card-news">
                 <div class="image">
-                  <img src="images/4.jpg" alt="image">
+                  <img src="landing/Images/4.jpg" alt="image">
                 </div>
                 <div class="card-bodyNews">
                 <h3>new web design trends</h3>
@@ -535,7 +535,7 @@ risus utaliquam dapibus. Thanks!</blockquote>
             <div class="col-4">
               <div class="card-news">
                  <div class="image">
-                  <img src="images/5.jpg" alt="image">
+                  <img src="landing/Images/5.jpg" alt="image">
                 </div>
                 <div class="card-bodyNews">
                 <h3>minimalistic design forever</h3>
@@ -548,7 +548,7 @@ risus utaliquam dapibus. Thanks!</blockquote>
             <div class="col-4">
               <div class="card-news">
                  <div class="image">
-                  <img src="images/6.jpg" alt="image">
+                  <img src="landing/Images/6.jpg" alt="image">
                 </div>
                 <div class="card-bodyNews">
                 <h3>hipster’s style in web</h3>
@@ -663,7 +663,7 @@ risus utaliquam dapibus. Thanks!</blockquote>
         <footer class="footer container">
           <section>
             <div class="footer-logo">
-              <a href="#"><img src="images/mountains.png" alt="image"></a>
+              <a href="#"><img src="landing/Images/mountains.png" alt="image"></a>
             </div>
             <div class="social">
              <div class="rhombus">
@@ -701,12 +701,12 @@ risus utaliquam dapibus. Thanks!</blockquote>
           </section>
         </footer>
         <div class="go-to-top">
-          <a href="#top"><img src="images/1.png" width=1.5% height: auto alt="image"></a>
+          <a href="#top"><img src="landing/Images/1.png" width=1.5% height: auto alt="image"></a>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>  
-    <script src="js/tabs.js"></script>
-    <script src="js/slick.js"></script>
-    <script src="js/main.js"></script> 
+    <script src="landing/Js/tabs.js"></script>
+    <script src="landing/Js/slick.js"></script>
+    <script src="landing/Js/main.js"></script> 
 </body>
 </html>
