--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
   </header>
-        <main class="content" id='top'>  
+        <main class="content" id="top">  
           <div class="banner">
             <div class="inner">
               <div class="container">
