--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
             <div class="custom-col">
                         <div class="custom-card">
                           <div class="image"> 
-                            <img src=landing/Images/"portfolio1.jpg" alt="image">
+                            <img src="landing/Images/"portfolio1.jpg" alt="image">
                           </div>
                         </div>
                      </div>
