--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@ risus utaliquam dapibus. Thanks!</blockquote>
           </section>
         </footer>
         <div class="go-to-top">
-          <a href="/landing/index.html/#top"><img src="landing/Images/1.png" width=1.5% height: auto alt="image"></a>
+          <a href="#top"><img src="landing/Images/1.png" width=1.5% height: auto alt="image"></a>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>  
