--- a/index.html
+++ b/index.html
@@ -42,6 +42,24 @@
           <div class="banner">
             <div class="inner">
               <div class="container">
+                  <div class="container2">
+	<div class="bird-container bird-container--one">
+		<div class="bird bird--one"></div>
+	</div>
+	
+	<div class="bird-container bird-container--two">
+		<div class="bird bird--two"></div>
+	</div>
+	
+	<div class="bird-container bird-container--three">
+		<div class="bird bird--three"></div>
+	</div>
+	
+	<div class="bird-container bird-container--four">
+		<div class="bird bird--four"></div>
+	</div>
+	
+</div>
                 <h1>thomas rhythm</h1>
                 <p>Extraordinary art director & creative minimalism lover</p>
               </div>            
